# py_project_template

./: LICENSE.txt  README.md  contributing.md  mkdocs.yml  pyproject.toml  run.cmd  settings.toml
docs/: README.md
src/app/: __main__.py  config.py  core.py
tests/: conftest.py  test_001_config.py  test_002_app.py
